<resources>
    <string name="app_name">易闲置</string>
    <!--module login-->
    <string name="module_login_hint_username">请输入用户名</string>
    <string name="module_login_hint_password">请输入密码</string>
    <string name="module_login_btn_login">登录</string>
    <string name="module_login_btn_register">注册</string>
    <string name="module_has_no_account">没有账号？</string>
    <!--MainActivity-->
    <string name="activity_main_main_page">首页</string>
    <string name="activity_main_message">消息</string>
    <string name="activity_main_shop_cart">购物车</string>
    <string name="activity_main_mine">我的</string>
    <!--购物车-->
    <string name="shopcart_choose_all">全选</string>
    <string name="shopcart_pay">结算</string>
    <string name="please_input_name">请输入商品</string>
    <string name="get_picture_from_camera">相机拍摄</string>
    <string name="get_picture_from_photo">打开相册</string>
    <string name="permission_rationale_text">使用此功能需要相机权限</string>
    <string name="string_permission_setting">权限设置</string>
    <string name="i_want_to_publish">我要发布</string>
    <string name="chat">咨询</string>
    <string name="logout">注销</string>
    <string name="order">我的订单</string>
</resources>
