<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".user.LoginActivity">

    <ImageView
        android:id="@+id/iv_touXiang"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="70dp"
        android:src="@drawable/icon_launcher" />

    <LinearLayout
        android:id="@+id/layout_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_touXiang"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_account"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/icon_account" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/module_login_hint_username" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_account"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:padding="4dp"
            android:src="@drawable/icon_password" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/module_login_hint_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_password"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_login"
            style="@style/common_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/module_login_btn_login"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_register"
            style="@style/common_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="70dp"
            android:text="@string/module_login_btn_register"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>