<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="25dp"
    android:paddingEnd="25dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="30dp">

        <com.zjf.transaction.widget.RoundImageView
            android:id="@+id/iv_user_pic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/zhushu" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_222222"
            android:textSize="18sp"
            android:theme="@style/BoldText"
            app:layout_constraintBottom_toTopOf="@id/tv_province_city"
            app:layout_constraintLeft_toRightOf="@id/iv_user_pic"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/tv_province_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_user_pic"
            app:layout_constraintLeft_toRightOf="@id/iv_user_pic"
            app:layout_constraintTop_toTopOf="@id/iv_user_pic"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/tv_university"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_gray"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@id/iv_user_pic"
            app:layout_constraintTop_toBottomOf="@id/tv_province_city"
            tools:text="@string/app_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_publish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_publish"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="18dp"
            android:textColor="@color/color_303030"
            android:textSize="17sp"
            android:theme="@style/BoldText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/i_want_to_publish" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/icon_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_E8E8E8"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/tv_publish"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_order"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="18dp"
            android:textColor="@color/color_303030"
            android:textSize="17sp"
            android:theme="@style/BoldText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/order" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/icon_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_E8E8E8"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/tv_order"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="18dp"
            android:textColor="@color/color_303030"
            android:textSize="17sp"
            android:theme="@style/BoldText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/logout" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/icon_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_E8E8E8"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/tv_logout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>